# contentloop-ai

./: .gitignore  README.md
backend/: conversation.py  main.py  optimization_agent.py  output_mermaid.py  pyproject.toml  requirements.txt  start.py  utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ThemeProvider.tsx
frontend/src/components/ui/: select.tsx  sonner.tsx
