[project]
name = "contentloop-backend"
version = "0.1.0"
description = "ContentLoop AI backend - Interactive content generation platform with human-in-the-loop AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.6",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.3",
    "uvicorn>=0.35.0",
]
